# eloho-profile

./: .env.example  .gitignore  PROFILE.md  README.md  SOUL.md  channel_directory.json  config.yaml  profile.yaml
memories/: MEMORY.md  USER.md
sessions/: sessions.json
skills/: .curator_state
state/: rich_sent_index.json
workspace/: README.md  SOUL.md  log.md  pyproject.toml  run.sh
workspace/data/: eloho.db
workspace/eloho/: __main__.py  cli.py  config.py  db.py  dca.py  eloho.py  log.py  logger.py  notify.py  prices.py  scraper.py  stripe_mock.py  stripe_rails.py
workspace/tests/: conftest.py  test_dca.py
